Style all buttons globally, move Send to Brain into thought bubble, fix nav overlap

--- a/client/src/components/BrainDump.css
+++ b/client/src/components/BrainDump.css
@@ -11,10 +11,10 @@
 
 .thought-bubble {
   position: absolute;
-  top: 80px;
-  left: 70px;
+  top: 75px;
+  left: 60px;
   width: 190px;
-  height: 75px;
+  height: 50px;
   border: none;
   background: transparent;
   resize: none;
@@ -24,12 +24,24 @@
   outline: none;
 }
 
+.send-to-brain-btn {
+  position: absolute;
+  top: 130px;
+  left: 100px;
+  border-color: var(--thought-bubble-blue);
+  color: var(--thought-bubble-blue);
+  font-size: 0.85rem;
+  padding: 4px 14px;
+  z-index: 6;
+}
+
 .brain-dump-page {
   display: flex;
   flex-direction: column;
   align-items: center;
   padding-top: 40px;
   position: relative;
+  padding-bottom: 100px;
 }
 
 .brain-label {
